# todo-api-haskell

./: .gitignore  Dockerfile  cabal.project  todo-api.cabal  todos.db
app/: Main.hs
src/: Api.hs  Model.hs  Monad.hs  Server.hs  Validation.hs
test/: SortSpec.hs
